<resources>
    <string name="app_name" translatable="false">Alzheimers App</string>
    <string name="settings">Settings</string>
    <string name="exitMessage">Please click twice to exit</string>
    <string name="personalData">Profile</string>
    <string name="information">Disease Information</string>
    <string name="dietary">Dietary</string>
    <string name="exercise">Physical Exercise</string>
    <string name="report">Reporting</string>
    <string name="diary">Personal Reporting</string>
    <string name="medications">Medications</string>
    <string name="mydoctor">My Doctors</string>
    <string name="profileName">Name</string>
    <string name="expandedImage">Image Animation</string>
    <string name="stepsSummary">You walked a total average number of 0 steps while using
        Medical App University.</string>
    <string name="bodyMassIndex">Body Mass Index \u2248 0</string>
    <string name="underweightBodyMassIndex">Underweight</string>
    <string name="normalWeightBodyMassIndex">Normal Weight</string>
    <string name="overweightBodyMassIndex">Overweight</string>
    <string name="obesityBodyMassIndex">Obesity</string>
    <string name="profileInformation">Profile Information</string>
    <string name="myMG">My Myasthenia Gravis</string>
    <string name="gender">Gender</string>
    <string name="birthday">Date of Birth</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="dateDiagnosis">Date of my diagnosis</string>
    <string name="nextAppointment">Next Appointment</string>
    <string name="errorMessage">Name must not be empty</string>
    <string name="profileDialogButtonPositive">Confirm</string>
    <string name="profileDialogButtonNegative">Cancel</string>
    <string name="profileDialogTitle">Change Profile Name</string>
    <string name="profileDialogDescription">Enter new profile name:</string>
    <string name="profileDialogHint">Andreas</string>
    <string name="genderDialogTitle">Select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthDateDefaultSetDate">15/6/1980</string>
    <string name="heightDialogTitle">Choose your height</string>
    <string name="weightDialogTitle">Choose your weight</string>
    <string name="myDoctorsInfo">My Doctors Info</string>
    <string name="updateDoctorInfo">Edit Doctor\'s Info</string>
    <string name="add_doctor_title">Add Doctor</string>
    <string name="doctor_name">Doctor\'s Name *</string>
    <string name="speciality">Speciality</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_doc">Email</string>
    <string name="notes">Notes</string>
    <string name="phone_prompt">Mobile</string>
    <string-array name="phone">
        <item>Mobile</item>
        <item>Work</item>
    </string-array>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="phoneMobile">Mobile</string>
    <string name="phoneWork">Work</string>
    <string name="mgInformation">Information</string>
    <string name="contact">Contact</string>
    <string name="hydration_instruction">
        Press the glass of water after you\'ve hydrated.</string>
    <string name="water_increment_content_desc">Press to record drinking water</string>
    <string name="default_water_count">0</string>
    <string name="reach_water_goal">0/8</string>
    <string name="default_water_increment">Press to add drinking water</string>
    <string name="default_water_decrement">Press to subtract drinking water</string>
    <string name="default_water_counter_in_milliliters">0 ml</string>
    <string name="glasses">glasses</string>
    <string name="glasses_message">Set a daily water drink intake\n<b><i>1 glass \u2248 250 ml</i></b></string>
    <string name="errorMessageWhenNoProfileDataAvailable">Fill in all your personal data
        to calculate your TOTAL BODY WATER percentage :)</string>
    <string name="exerciseDemoTab1">Exercises Demo</string>
    <string name="parkinsonTestTab3">Parkinson Test</string>
    <string name="step_counter_toolbar">Step Counter Timer</string>
    <string name="parkinson_test_toolbar">Parkinson Test Timer</string>
    <string name="stepCounterTimerDialogTitle">Choose timer for Step Counter</string>
    <string name="parkinsonTestTimerDialogTitle">Choose timer for Parkinson Test</string>
    <string name="parkinsonTestSetTimerConfiguration">Set Timer</string>
    <string name="parkinsonTestGame1">Test with 1 button</string>
    <string name="parkinsonTestGame2">Test with 2 buttons</string>
    <string name="mg">Myasthenia Gravis</string>
    <string name="what">What is?</string>
    <string name="causes">Causes</string>
    <string name="symp">Symptoms</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="treatment">Treatment</string>
    <string name="complication">Complications</string>
    <string name="epidemio">Epidemiology</string>
    <string name="long_outlook">Long-term outlook</string>
    <string name="association">Contact Association</string>
    <string name="what_is_Title">Alzheimer\'s Disease\n</string>
    <string name="what_is_1">Alzheimer’s disease is an irreversible, progressive brain
        disorder that slowly destroys memory and thinking skills and, eventually, the ability
        to carry out the simplest tasks. In most people with the disease—those with the late-onset
        type—symptoms first appear in their mid-60s. Early-onset Alzheimer’s occurs between a person’s
        30s and mid-60s and is very rare. Alzheimer’s disease is the most common cause of dementia among
        older adults.</string>
    <string name="what_is_2">The disease is named after Dr. Alois Alzheimer. In 1906, Dr. Alzheimer
        noticed changes in the brain tissue of a woman who had died of an unusual mental illness.
        Her symptoms included memory loss, language problems, and unpredictable behavior. After she
        died, he examined her brain and found many abnormal clumps (now called amyloid plaques) and
        tangled bundles of fibers (now called neurofibrillary, or tau, tangles).</string>
    <string name="what_is_3">These plaques and tangles in the brain are still considered some of the
        main features of Alzheimer’s disease. Another feature is the loss of connections between
        nerve cells (neurons) in the brain. Neurons transmit messages between different parts of the
        brain, and from the brain to muscles and organs in the body. Many other complex brain changes
        are thought to play a role in Alzheimer’s, too.</string>
    <string name="what_is_4">This damage initially appears to take place in the hippocampus, the
        part of the brain essential in forming memories. As neurons die, additional parts of the brain
        are affected. By the final stage of Alzheimer’s, damage is widespread, and brain tissue has
        shrunk significantly.</string>
    <string name="causes_Title">Causes\n</string>
    <string name="causes_1">Like all types of dementia, Alzheimer\'s is caused by brain cell death.
        It is a neurodegenerative disease, which means there is progressive brain cell death that happens over time.
    </string>
    <string name="causes_2">Risk factors:</string>
    <string name="causes_3">Unavoidable risk factors for developing the condition include:\n
        aging, a family history of Alzheimer\'s, carrying certain genes.
    </string>
    <string name="causes_4">Modifiable factors that may help prevent Alzheimers include:\n
         •  getting regular exercise\n
         •  maintaining a healthy cardiovascular system\n
         •  following a varied and healthful diet\n
         •  participating in lifelong learning and cognitive training\n
        Some studies suggest that staying mentally and socially engaged may possibly reduce the risk of Alzheimers.\n
    </string>
    <string name="symptom_Title">Symptoms\n</string>
    <string name="symptom_1">The cognitive decline must be seen in at least two of the five symptom areas listed below:</string>
    <string name="symptom_2"><b>Symptoms of MG can include:</b>\n
        •  repetitive questions or conversations\n
        •  misplacing personal belonging\n
        •  forgetting events or appointments\n
        •  getting lost on a familiar route\n
        •  poor understanding of safety risks\n
        •  inability to recognize faces or common objects or to find objects in direct view\n
        •  inability to use simple tools, for example, to orient clothing to the body\n
        •  difficulty thinking of common words while speaking, hesitations\n
        •  out-of-character mood changes, including agitation, apathy, social withdrawal or a lack of interest, motivation, or initiative\n
        •  loss of empathy\n
        •  compulsive, obsessive, or socially unacceptable behavior\n
    </string>
    <string name="symptom_3">Alzheimer\'s is most likely when memory loss is a prominent symptom, especially in the area of learning and recalling new information.\n</string>
    <string name="diagnosis_Title">Diagnosis\n</string>
    <string name="diagnosis_1">There is no single test for Alzheimers disease, so doctors will
        look at the signs and symptoms, take a medical history, and rule out other conditions before
        making a diagnosis. Sometimes the symptoms of dementia are related to an inherited disorder
        such as Huntingtons disease, so genetic testing may be done. After ruling out other
        possible conditions, the doctor will carry out cognitive and memory tests, to assess
        the persons ability to think and remember.\n</string>
    <string name="today_meds_btn">Med\'s\ntimetable</string>
    <string name="all_meds_btn">My Meds</string>
    <string name="attention_btn">Attention</string>
    <string name="attention"><b>ATTENTION!</b> The following medications are indicative. Before take a medication talk with your doctor.</string>
    <string name="anesthetic_medications">Anesthetic</string>
    <string name="anesthetic">
        • Curare\n
        • Non – depolarizing (Vencurinium)\n
    </string>
    <string name="antibiotic_medications">Antibiotics</string>
    <string name="antibiotic1">
        • Neomycin\n
        • Streptomycin \n
        • Gentamicin\n
        • Colistin\n
        • Kanamycin\n
        • Tobramycin\n
        • Polymyxin\n
        • Viomycin\n
        • Sulfonamides\n
        • Telithromycin\n
    </string>
    <string name="antibiotic2">
        • Amikacin\n
        • Polymyxin B\n
        • Tetracyclines\n
        • Lincomycin\n
        • Clindamycin\n
        • Erythromycin\n
        • Ampicillin\n
        • Fluoroquinolones\n(Norfloxacin, Ofloxacin, Pefloxacin)\n
    </string>
    <string name="cardio_medications">Cardiovascular Medications</string>
    <string name="cardio">
        • Procainamide\n
        • Procaine \n
        • Beta – blockers (Propranolol,Pindolol,Sotalol,Timolol)\n
        • Quinidine\n
        • Verapamil\n
        • Bretylium\n
    </string>
    <string name="nervous_system_medications">Medications for Nervous System</string>
    <string name="nervous_system">
        • Chlorpromazine\n
        • Lithium\n
        • Gabapentin\n
        • Phenytoin\n
        • Amitriptyline\n
        • Barbiturates\n
        • Benzodiazepines\n
    </string>
    <string name="other_medications">Other</string>
    <string name="other">
        • Chloroquine\n
        • Botulinum toxin\n
        • Bactracin\n
        • Quinine\n
        • Penicillamin\n
        • Magnesium\n
        • L- camitine\n
        • Contrast agents\n\n
        • Mint\n
    </string>
</resources>