<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ehealth.lab.university.disease.description.DiseaseMain">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:context=".disease.description.MGInformation">

                <TextView
                    android:id="@+id/title_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/paragraph_info_1"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_horizontal"
                    android:text="@string/what_is_Title"
                    android:textColor="@color/primary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/paragraph_info_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignEnd="@+id/paragraph_info_4"
                    android:layout_below="@+id/title_info"
                    android:background="@null"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/what_is_1"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/paragraph_info_2"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/paragraph_info_1"
                    android:layout_marginTop="12dp"
                    android:layout_toStartOf="@+id/mg_image"
                    android:background="@null"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/what_is_2"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/paragraph_info_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/paragraph_info_1"
                    android:layout_below="@+id/paragraph_info_2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/what_is_3"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/paragraph_info_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/paragraph_info_3"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@null"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/what_is_4"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="136dp"
                    android:layout_height="214dp"
                    android:layout_below="@+id/paragraph_info_1"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/paragraph_info_2"
                    app:srcCompat="@drawable/hope_alzheimer" />

            </RelativeLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>

